<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/transactions_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTransaction"
    tools:layout_editor_absoluteX="-7dp"
    tools:layout_editor_absoluteY="-26dp">

    <EditText
        android:id="@+id/edit_text_product_name"
        style="@style/text_style_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_product"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/title_textview_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/edit_text_quantity"
        style="@style/text_style_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_stock_quantity"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/title_textview_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_product_name"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/edit_text_price"
        style="@style/text_style_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/purchase_price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/title_textview_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_quantity"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/transaction_out_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/transaction_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/transaction_in_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_price"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/transaction_in_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_price"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>