<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:textAlignment="center"
    tools:context=".MainActivity"
    style="@style/transactions_style">

    <Button
        android:id="@+id/fmcg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#F44336"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/button_padding"
        android:text="@string/fast_moving_consumer_goods"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stock_remaining_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/stock_remaining_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:backgroundTint="#F44336"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/button_padding"
        android:text="@string/stock_remaining"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fmcg_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/products_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/products_button"
        android:text="@string/products"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stock_remaining_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        style="@style/button_style" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="478dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_remaining_button" />

    <TextView
        android:id="@+id/currentUserTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textColor="@color/title_textview_color"
        android:textColorHint="@color/text_color_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stock_remaining_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_transaction_button"
        style="@style/transaction_wigdet_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/fab_description"
        app:backgroundTint="@color/title_textview_color"
        app:layout_constraintBottom_toTopOf="@+id/fmcg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentUserTextView"
        app:layout_constraintVertical_bias="0.549"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_style_dark"
        android:text="@string/transaction_textview"
        app:layout_constraintBottom_toTopOf="@+id/stock_remaining_button"
        app:layout_constraintEnd_toStartOf="@+id/fab_transaction_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentUserTextView"
        app:layout_constraintVertical_bias="0.545" />
</androidx.constraintlayout.widget.ConstraintLayout>